--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -4,6 +4,7 @@
       <div><a href="/omk/pages/forms/"><img id="omkLogo" src="../img/ic_omk_nobg-web.png"></a></div>
       <!-- Title -->
       <span class="mdl-layout-title"><a href="/omk/pages/forms/" class="pageTitle">{{ site.title }}</a></span>
+      <span>&nbsp;&nbsp;(logout)</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
 
