--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -1,4 +1,4 @@
-  <header class="mdl-layout__header">
+  <header id="headerContainer" class="mdl-layout__header">
 
     <div class="mdl-layout__header-row">
       <div><a href="/omk/pages/forms/"><img id="omkLogo" src="../img/ic_omk_nobg-web.png"></a></div>
@@ -8,15 +8,25 @@
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
 
-      <button class="mdl-button mdl-js-button mdl-button--icon" id="menu-lower-left">
+      <!-- <button class="mdl-button mdl-js-button mdl-button--icon" id="menu-lower-left">
         <i class="material-icons">more_vert</i>
+      </button> -->
+
+      <a href="/omk/pages/upload-form/">
+        <button class="mdl-button mdl-button--colored">
+          UPLOAD FORM
+        </button>
+      </a>
+
+      <button class="mdl-button mdl-button--colored" >
+        <i class="material-icons">settings</i> USER ACCOUNT
       </button>
 
-      <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="menu-lower-left">
+      <!-- <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="menu-lower-left">
         {% for option in site.more_vert %}
         <li><a href="{{ option[1].link }}" class="mdl-menu__item">{{ option[1].name }}</a></li>
         {% endfor %}
-      </ul>
+      </ul> -->
     </div>
   </header>
 
