--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -76,6 +76,28 @@ a {
         color: #000;
 }
 
+#headerContainer {
+
+    .mdl-button {
+            background: #fff;
+            color: #7ebc6f;
+            margin-left: 10px;
+            line-height: 0px;
+            padding: 20px 20px;
+            border-radius: 5px;
+        }
+        .material-icons{
+            line-height: 0px;
+        }
+    // .mdl-button--raised.mdl-button--colored:hover {
+    //             background: rgba(158,158,158,.2);
+    //             box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
+    //             color: #7ebc6f;
+    //         }
+
+}
+
+
 .mdl-list {
         display: -webkit-inline-box;
         padding: 8px 0;
