--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -58,6 +58,11 @@ a {
         font-weight: 500;
 }
 
+.page-content{
+    max-width: 1024px;
+    margin: auto;
+}
+
 .pageTitle{
         color: white;
         text-decoration: none;
@@ -89,11 +94,14 @@ a {
         .material-icons{
             line-height: 0px;
         }
-    // .mdl-button--raised.mdl-button--colored:hover {
-    //             background: rgba(158,158,158,.2);
-    //             box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
-    //             color: #7ebc6f;
-    //         }
+        .mdl-menu__container{
+            top: 60px !important;
+
+        }
+        .mdl-menu__outline{
+            border-radius: 5px !important;
+            width: 181px !important;
+        }
 
 }
 
