Added users page

--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -20,7 +20,9 @@
 
         <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="menu-lower-left">
           <li class="mdl-menu__item">My Account</li>
-          <li class="mdl-menu__item mdl-menu__item--full-bleed-divider">User Management</li>
+          <a href="/omk/pages/users/">
+            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider">User Management</li>
+          </a>
           <li class="mdl-menu__item" @click="logOut()">Sign Out</li>
         </ul>
       </div>
