--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -102,6 +102,11 @@ a {
             border-radius: 5px !important;
             width: 181px !important;
         }
+        a {
+            color: #7ebc6f;
+            font-weight: 500;
+            text-decoration: none;
+        }
 
 }
 
