--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -63,6 +63,7 @@ a {
     max-width: 1024px;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 }
 
 .pageTitle{
@@ -105,7 +106,7 @@ a {
             width: 181px !important;
         }
         a {
-            color: #7ebc6f;
+            color: #fff;
             font-weight: 500;
             text-decoration: none;
         }
@@ -114,15 +115,15 @@ a {
 
 #userManagement {
 
-    .backLink{
-        padding-top: 40px;
-    }
-    .section{
-        width: 100%;
-        position: relative;
-    }
+        .backLink{
+            padding-top: 40px;
+        }
+        .section{
+            width: 100%;
+            position: relative;
+        }
 
-    .mdl-button {
+        .mdl-button {
             background: #7ebc6f;
             color: #fff;
             margin-left: 10px;
@@ -141,6 +142,24 @@ a {
             right: 0px;
             top: 22px;
             color: #B1B1B1;
+        }
+
+        .mdl-radio + .mdl-radio {
+            margin-left: 1.5rem;
+        }
+
+        #addUser{
+
+            .mdl-button {
+                background: none;
+                color: #2B9BF5;
+                margin-left: 10px;
+                line-height: 0px;
+                padding: 12px 20px;
+                border-radius: 5px;
+                height: 45px;
+            }
+
         }
 
 
