Fixed the http request and added user management page

--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -19,7 +19,9 @@
         </button>
 
         <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="menu-lower-left">
-          <li class="mdl-menu__item">My Account</li>
+          <a href="/omk/pages/useraccount/">
+            <li class="mdl-menu__item">My Account</li>
+          </a>
           <a href="/omk/pages/users/">
             <li class="mdl-menu__item mdl-menu__item--full-bleed-divider">User Management</li>
           </a>
