finalized user management page

--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -330,6 +330,22 @@ a {
 
 }
 
+#userManagement {
+
+        .section{
+            width: 100%;
+            position: relative;
+            padding-bottom: 50px;
+        }
+}
+#activeUser {
+
+        .section{
+            width: 100%;
+            position: relative;
+            padding-bottom: 50px;
+        }
+}
 
 .mdl-list {
         display: -webkit-inline-box;
