chipping on redlnies

--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -10,7 +10,9 @@
 
   <!-- Local Material Design Lite css Library -->
   <link rel="stylesheet" href="{{ "../css/material.css" }}">
-  
+
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+
 
   <!-- Custom theme css -->
   <link rel="stylesheet" href="{{ "../css/main.css" }}">
