--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -59,17 +59,41 @@ a {
         font-weight: 500;
 }
 
+html, body {
+    font-family: "Roboto";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
 .page-content{
-    max-width: 1024px;
+    max-width: 940px;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
 }
 
-.pageTitle{
+
+    .pageTitle{
         color: white;
         text-decoration: none;
+    }
+
+// progressbar bar bar1
+
+// #progressLoader{
+.mdl-progress.mdl-progress--indeterminate > .bar1, .mdl-progress.mdl-progress__indeterminate > .bar1 {
+    background-color: #5a844e !important;
+    -webkit-animation-name: indeterminate1;
+    animation-name: indeterminate1;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
 }
+// }
 
 .mdl-layout__header{
         background-color: #7ebc6f;
@@ -89,15 +113,23 @@ a {
     text-align: center;
 }
 
+.backLink{
+            padding-top: 40px;
+            font-size: 18px;
+            font-weight: 100;
+        }
+
 #headerContainer {
 
     .mdl-button {
             background: #fff;
             color: #7ebc6f;
-            margin-left: 10px;
+            margin-left: 5px;
+            margin-right: 5px;
             line-height: 0px;
-            padding: 20px 20px;
-            border-radius: 5px;
+            // padding: 20px 20px;
+            border-radius: 3px;
+            font-size: 13px;
         }
         .material-icons{
             line-height: 0px;
@@ -107,8 +139,11 @@ a {
 
         }
         .mdl-menu__outline{
-            border-radius: 5px !important;
-            width: 181px !important;
+            border-radius: 3px !important;
+            width: 162px !important;
+        }
+        .mdl-menu__item {
+            width: 132px !important
         }
         a {
             color: #fff;
@@ -120,9 +155,11 @@ a {
 
 #userManagement {
 
-        .backLink{
-            padding-top: 40px;
-        }
+        // .backLink{
+        //     padding-top: 40px;
+        //     font-size: 18px;
+        //     font-weight: 100;
+        // }
         .section{
             width: 100%;
             position: relative;
@@ -174,11 +211,12 @@ a {
 }
 #activeUser {
 
-        .backLink{
-            padding-top: 40px;
-            color: #2B9BF5;
-            cursor: pointer;
-        }
+        // .backLink{
+        //     padding-top: 40px;
+        //     color: #2B9BF5;
+        //     cursor: pointer;
+        //     font-size: 18px;
+        // }
         .section{
             width: 100%;
             position: relative;
@@ -264,24 +302,26 @@ a {
 
 #userAccount {
 
-        .backLink{
-            padding-top: 40px;
-        }
+        // .backLink{
+        //     padding-top: 40px;
+        //     font-size: 18px;
+        //     font-weight: 100;
+        // }
         .section{
             width: 100%;
             position: relative;
             padding-bottom: 50px;
         }
 
-        .mdl-button--fab{
-            background: #7ebc6f;
-            color: #fff;
-            margin-left: 10px;
-            line-height: 0px;
-            padding: 12px 20px;
-        }
+        // .mdl-button--fab{
+        //     background: #7ebc6f;
+        //     color: #fff;
+        //     margin-left: 10px;
+        //     line-height: 0px;
+        //     padding: 12px 20px;
+        // }
 
-        .mdl-button {
+        .save{
             background: #7ebc6f;
             color: #fff;
             margin-left: 10px;
@@ -289,7 +329,46 @@ a {
             padding: 12px 20px;
             border-radius: 5px;
             height: 45px;
+            font-size: 18px;
         }
+        .addForm{
+            background: #7ebc6f;
+            color: #fff;
+            margin-left: 10px;
+            line-height: 0px;
+            padding: 12px 20px;
+            border-radius: 5px;
+            height: 45px;
+            font-size: 16px;
+        }
+
+        .modalButton {
+            color: #2B9BF5;
+        }
+        .perm{
+            color: #9E9E9E;
+            font-size: 17px;
+            padding: 30px 0px 10px 0px;
+        }
+
+        ul{
+            list-style: none;
+            padding-left: 0px;
+        }
+        li{
+            font-size: 15px;
+            color: #2E2E2E;
+        }
+
+        // .mdl-button {
+        //     background: #7ebc6f;
+        //     color: #fff;
+        //     margin-left: 10px;
+        //     line-height: 0px;
+        //     padding: 12px 20px;
+        //     border-radius: 5px;
+        //     height: 45px;
+        // }
 
         .activeButton{
             background: #2B9BF5;
