--- a/jekyll/css/submissions.css
+++ b/jekyll/css/submissions.css
@@ -40,8 +40,12 @@
     margin-top: 20px;
 }
 
+
 .backLink{
-            // padding-top: 40px;
+            padding-top: 40px;
+            font-size: 18px;
+            font-weight: 100;
+            color: #2B9BF5;
         }
 
 .mask {
@@ -59,7 +63,7 @@ ul a {
 }
 
 #submissionPagespinner {
-    margin: 40px auto;
+    // margin: 40px auto;
 
 }
 
