--- a/jekyll/_layouts/default.html
+++ b/jekyll/_layouts/default.html
@@ -29,12 +29,13 @@
     </div>
 
     <!-- Material Design Lite js Library -->
-    <script type="text/javascript" src="../js/vendor/material.min.js"></script>
+    <!-- <script type="text/javascript" src="../js/vendor/material.min.js"></script> -->
 
       <script type="text/javascript" src="../js/vendor/vue.js"></script>
       <script type="text/javascript" src="../js/vendor/vue-resource.min.js"></script>
+      <script src="https://unpkg.com/vuetify/dist/vuetify.min.js"></script>
 
-      <script type="text/javascript" src="../js/vendor/toast.min.js"></script>
+      <!-- <script type="text/javascript" src="../js/vendor/toast.min.js"></script> -->
       <script type="text/javascript" src="../js/vendor/dialog-polyfill.js"></script>
 
       <!--Inject AUTH dependency to template-->
