--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -9,11 +9,11 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
   <!-- Local Material Design Lite css Library -->
-  <!-- <link rel="stylesheet" href="{{ "../css/material.css" }}"> -->
+  <link rel="stylesheet" href="{{ "../css/material.css" }}">
 
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel="stylesheet" type="text/css">
 
-  <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css">
+  <!-- <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css"> -->
 
 
   <!-- Custom theme css -->
