--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -66,6 +66,15 @@ html, body {
     line-height: 20px;
 }
 
+.mdl-textfield--floating-label.is-focused .mdl-textfield__label,
+  .mdl-textfield--floating-label.is-dirty .mdl-textfield__label {
+    color: #5a844e !important;
+    }
+
+    .mdl-textfield .mdl-textfield__label:after{
+        background-color: #5a844e;
+    }
+
 .mdl-textfield__input{
     font-family: "Roboto";
 }
@@ -107,9 +116,9 @@ html, body {
         color: rgb(255,255,255);
 }
 .mdl-button--raised.mdl-button--colored:hover {
-        background: rgba(158,158,158,.2);
+        background: #5a844e;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
-        color: #000;
+        color: #fff;
 }
 
 .mdl-data-table td, .mdl-data-table th {
