making progress on redlines 2

--- a/jekyll/_layouts/default.html
+++ b/jekyll/_layouts/default.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- Material Design Lite js Library -->
-    <script type="text/javascript" src="../js/vendor/material.min.js"></script>
+    <script type="text/javascript" src="../js/vendor/material1.3.min.js"></script>
 
       <script type="text/javascript" src="../js/vendor/vue.js"></script>
       <script type="text/javascript" src="../js/vendor/vue-resource.min.js"></script>
