--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -13,7 +13,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel="stylesheet" type="text/css">
 
-  <!-- <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css"> -->
+  <link rel="stylesheet" href="{{ "../css/keen-ui.css" }}">
 
 
   <!-- Custom theme css -->
