--- a/jekyll/_layouts/default.html
+++ b/jekyll/_layouts/default.html
@@ -33,7 +33,7 @@
 
       <script type="text/javascript" src="../js/vendor/vue.js"></script>
       <script type="text/javascript" src="../js/vendor/vue-resource.min.js"></script>
-      <!-- <script src="https://unpkg.com/vuetify/dist/vuetify.min.js"></script> -->
+      <script src="../js/vendor/keen-ui.min.js"></script>
 
       <script type="text/javascript" src="../js/vendor/toast.min.js"></script>
       <script type="text/javascript" src="../js/vendor/dialog-polyfill.js"></script>
