--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -19,6 +19,12 @@
   <!-- Custom theme css -->
   <link rel="stylesheet" href="{{ "../css/main.css" }}">
 
+  <!-- Custom theme css -->
+  <link rel="stylesheet" href="{{ "../css/keenui-overwrite.css" }}">
+
+  <!-- Custom theme css -->
+  <link rel="stylesheet" href="{{ "../css/variables.scss" }}">
+
 
 
 
