--- a/jekyll/css/keenui-overwrite.css
+++ b/jekyll/css/keenui-overwrite.css
@@ -33,3 +33,13 @@
     color: #9e9e9e;
 }
 
+.drop-element {
+    width: 153px;
+    top: 10px;
+    margin-top: 8px;
+}
+
+.ui-fab--color-default .ui-fab__icon {
+    color: #fff;
+}
+
