--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -166,6 +166,17 @@ h3 {
     right: 37px;
 }
 
+.save{
+            background: #7ebc6f;
+            color: #fff;
+            position: absolute;
+            top: -121px;
+            right: 50px;
+        }
+.activeSave{
+    background: #5a844e;
+}
+
 #headerContainer {
 
     .mdl-button {
@@ -244,23 +255,23 @@ h3 {
             height: 35px;
         }
 
-        .save{
-            background: #7ebc6f;
-            color: #fff;
-            margin-left: 10px;
-            line-height: 0px;
-            padding: 12px 20px;
-            height: 55px;
-            font-size: 18px;
-            position: absolute;
-            top: -121px;
-            right: 50px;
-        }
-        .saveText{
-                font-size: 12px;
-                position: absolute;
-                left: 14px;
-        }
+        // .save{
+        //     background: #7ebc6f;
+        //     color: #fff;
+        //     // margin-left: 10px;
+        //     // line-height: 0px;
+        //     // padding: 12px 20px;
+        //     // height: 55px;
+        //     // font-size: 18px;
+        //     position: absolute;
+        //     top: -121px;
+        //     right: 50px;
+        // }
+        // .saveText{
+        //         font-size: 12px;
+        //         position: absolute;
+        //         left: 14px;
+        // }
 
         .search{
             position: relative;
@@ -363,6 +374,13 @@ h3 {
               .mdl-textfield--floating-label.is-dirty .mdl-textfield__label {
                 color: #9e9e9e !important;
                 }
+
+
+                .save{
+            position: absolute;
+            top: -32px;
+            right: 50px;
+        }
 }
 
         .fade-enter-active {
@@ -397,6 +415,9 @@ h3 {
 
 
 
+
+
+
 #userAccount {
 
         // .backLink{
@@ -415,22 +436,12 @@ h3 {
         }
 
         .save{
-            background: #7ebc6f;
-            color: #fff;
-            margin-left: 10px;
-            line-height: 0px;
-            padding: 12px 20px;
-            height: 55px;
-            font-size: 18px;
+
             position: absolute;
             top: -21px;
             right: 50px;
         }
-        .saveText{
-                font-size: 12px;
-                position: absolute;
-                left: 14px;
-        }
+
         .addForm{
             background: #7ebc6f;
             color: #fff;
