--- a/jekyll/css/keenui-overwrite.css
+++ b/jekyll/css/keenui-overwrite.css
@@ -23,6 +23,11 @@
         margin-right: 30px;
     }
 
+#useraccountPage .ui-textbox{
+        width: 205px !important;
+        float: left;
+    }
+
 #usersPage .ui-textbox__label-text{
     color: #9e9e9e;
 }
