--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -163,7 +163,7 @@ h3 {
     position: absolute;
     font-size: 40px;
     top: 3px;
-    right: 37px;
+    right: 70px;
 }
 
 .save{
@@ -238,7 +238,7 @@ h3 {
         //     font-weight: 100;
         // }
         h3{
-            font-size: 26px;
+            font-size: 24px;
         }
         .section{
             width: 100%;
@@ -320,21 +320,28 @@ h3 {
         // }
 
         h3{
-            font-size: 26px;
+            font-size: 24px;
         }
         .section{
             width: 100%;
             position: relative;
         }
 
-        .mdl-button {
+        .boxWithCheck{
+            position: absolute;
+            font-size: 40px;
+            top: 3px;
+            right: 58px;
+        }
+
+        .addForm{
             background: #7ebc6f;
             color: #fff;
             margin-left: 10px;
             line-height: 0px;
-            padding: 12px 20px;
             border-radius: 5px;
-            height: 45px;
+            height: 35px;
+            font-size: 16px;
         }
 
         .search{
@@ -358,17 +365,17 @@ h3 {
             margin-left: 1.5rem;
         }
 
-        #addUser{
-            .mdl-button {
-                background: none;
-                color: #2B9BF5;
-                margin-left: 10px;
-                line-height: 0px;
-                padding: 12px 20px;
-                border-radius: 5px;
-                height: 45px;
-            }
-        }
+        // #addUser{
+        //     .mdl-button {
+        //         background: none;
+        //         color: #2B9BF5;
+        //         margin-left: 10px;
+        //         line-height: 0px;
+        //         padding: 12px 20px;
+        //         border-radius: 5px;
+        //         height: 45px;
+        //     }
+        // }
 
         .mdl-textfield--floating-label.is-focused .mdl-textfield__label,
               .mdl-textfield--floating-label.is-dirty .mdl-textfield__label {
@@ -420,14 +427,8 @@ h3 {
 
 #userAccount {
 
-        // .backLink{
-        //     padding-top: 40px;
-        //     font-size: 18px;
-        //     font-weight: 100;
-        // }
-
         h3{
-            font-size: 26px;
+            font-size: 24px;
         }
         .section{
             width: 100%;
@@ -447,7 +448,6 @@ h3 {
             color: #fff;
             margin-left: 10px;
             line-height: 0px;
-            // padding: 12px 20px;
             border-radius: 5px;
             height: 35px;
             font-size: 16px;
