--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -163,7 +163,7 @@ h3 {
     position: absolute;
     font-size: 40px;
     top: 3px;
-    right: 70px;
+    right: 37%;
 }
 
 .save{
@@ -331,7 +331,7 @@ h3 {
             position: absolute;
             font-size: 40px;
             top: 3px;
-            right: 58px;
+            // right: 72px;
         }
 
         .addForm{
