--- a/jekyll/css/keenui-overwrite.css
+++ b/jekyll/css/keenui-overwrite.css
@@ -17,6 +17,14 @@
     border-bottom-width: 2px;
 }
 
+.ui-fab {
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.2), 0 0px 0px 0 rgba(0, 0, 0, 0.16);
+}
+
+.ui-fab:hover, body[modality="keyboard"] .ui-fab:focus {
+    box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.25), 0 0px 0px 0 rgba(0, 0, 0, 0.2);
+}
+
 #usersPage .ui-textbox{
         width: 205px !important;
         float: left;
