Check if there was really a user change

--- a/jekyll/_layouts/default.html
+++ b/jekyll/_layouts/default.html
@@ -31,6 +31,8 @@
     <!-- Material Design Lite js Library -->
     <script type="text/javascript" src="../js/vendor/material1.3.min.js"></script>
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
+
       <script type="text/javascript" src="../js/vendor/vue.js"></script>
       <script type="text/javascript" src="../js/vendor/vue-resource.min.js"></script>
       <script src="../js/vendor/keen-ui.min.js"></script>
