--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -169,9 +169,6 @@ h3 {
 .save{
             background: #7ebc6f;
             color: #fff;
-            // position: absolute;
-            // top: -121px;
-            // right: 50px;
         }
 
 .editButotn{
@@ -191,6 +188,14 @@ h3 {
 .trashcan i{
     color: red;
     font-size: 28px;
+}
+
+.mdl-dialog__title {
+    padding: 24px 24px 0;
+    margin: 0;
+    font-size: 24px;
+    width: 100%;
+    font-weight: 200;
 }
 
 #headerContainer {
