--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -194,7 +194,6 @@ h3 {
     padding: 24px 24px 0;
     margin: 0;
     font-size: 24px;
-    width: 100%;
     font-weight: 200;
 }
 
@@ -685,7 +684,7 @@ form{
 }
 
 .mdl-dialog__content p{
-        text-align: center;
+        text-align: left;
         font-size: 18px;
 }
 
