Fixed issue #20. Styled the Enketo modal like the rest

--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -103,6 +103,10 @@ html, body {
         text-decoration: none;
     }
 
+    .modalButton {
+            color: #2B9BF5;
+        }
+
 // progressbar bar bar1
 
 // #progressLoader{
