--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -618,6 +618,46 @@ h3 {
         width: 400px;
 }
 
+#submissionsPage{
+    .dataTables_length{
+        display: none;
+    }
+
+    .mdl-grid{
+        padding: 0px;
+    }
+    .editButton{
+        color: #7ebc6f;
+        cursor: pointer;
+    }
+
+    .modalButton {
+            color: #2B9BF5;
+        }
+
+    .dt-table{
+        overflow: auto;
+    }
+    .dataTables_wrapper{
+        width: 940px;
+    }
+
+    .grid-lower{
+        display: none !important;
+    }
+    .section{
+        width: 940px;
+    }
+
+    .section.table{
+        overflow: auto;
+    }
+    .search{
+            position: relative;
+            float: right;
+        }
+}
+
 //Submission
 /* position textareas and renderings over each other */
 .areas {position: relative; width: 100%; height: 25em;}
@@ -668,7 +708,7 @@ h3 {
         white-space: nowrap;
         line-height: 1em;
         border: 1px solid #aaa;
-        padding: 6px 6px;
+        // padding: 6px 6px;
 }
 
 form{
