--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -14,7 +14,7 @@
           </button>
         </a>
 
-        <button class="mdl-button popover-trigger" id=""
+        <button class="mdl-button popover-trigger" id="userButton"
                 ref="dropdownTrigger"
                 tabindex="0"
                 v-if="auth.user.authenticated" v-cloak>
@@ -22,7 +22,7 @@
           <span style="text-transform: uppercase;">[{user.username}]</span>
         </button>
 
-        <ui-popover trigger="dropdownTrigger" open-on="hover" ref="dropdown" v-if="auth.user.authenticated" v-cloak>
+        <ui-popover trigger="dropdownTrigger" open-on="hover" ref="dropdown" v-if="auth.user.authenticated" v-cloak style="z-index: 100;">
             <ui-menu
                 contain-focus
                 :options="menuOptions"
