--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -201,6 +201,10 @@ h3 {
     font-weight: 200;
 }
 
+.editMode{
+    cursor: pointer;
+}
+
 #headerContainer {
 
     .mdl-button {
@@ -393,6 +397,10 @@ h3 {
               .mdl-textfield--floating-label.is-dirty .mdl-textfield__label {
                 color: #9e9e9e !important;
                 }
+
+        .editMode{
+            cursor: pointer;
+        }
 
 
 }
