pushing some last minute redlines

--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -647,7 +647,7 @@ h3 {
         overflow: auto;
     }
     .dataTables_wrapper{
-        width: 940px;
+        // width: 940px;
     }
 
     .grid-lower{
@@ -657,6 +657,7 @@ h3 {
         width: 940px;
         padding-top: 50px;
         position: relative;
+        // height: 100px;
     }
 
     .section.table{
