Fixed the header menu issue for write and read users

--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -22,7 +22,7 @@
           <span style="text-transform: uppercase;">[{user.username}]</span>
         </button>
 
-        <ui-popover trigger="dropdownTrigger" open-on="hover" ref="dropdown" v-if="auth.user.authenticated" v-cloak style="z-index: 100;">
+        <ui-popover trigger="dropdownTrigger" open-on="hover" ref="dropdown" v-if="auth.user.authenticated && showHeaderMenu" v-cloak style="z-index: 100;">
             <ui-menu
                 contain-focus
                 :options="menuOptions"
