ui for delete form add flyByRoutes to settings

--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -825,3 +825,9 @@ form{
     width: 100%;
     max-width: 100%;
 }
+
+.font-important {
+  color: #ff0000;
+  text-decoration: underline;
+  font-weight: bold;
+}
