--- a/jekyll/css/forms.css
+++ b/jekyll/css/forms.css
@@ -14,6 +14,7 @@
 #enketo-dialog .mdl-dialog__content {
     padding: 20px 15px;
     color: rgba(0,0,0, 0.54);
+    word-wrap: break-word;
 }
 
 #enketo-dialog .mdl-dialog__title {
